[package]
name = "ppproperly"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitfield = "0.14.0"
ppproperly_macros = { git = "https://github.com/rsdsl/ppproperly_macros.git", version = "0.1.0" }
thiserror = "1.0"
